lib_LTLIBRARIES    = %reldir%/liblox.la
%canon_reldir%_liblox_la_CPPFLAGS = -I$(top_srcdir)/include \
			            -I$(top_srcdir)/src/lib
%canon_reldir%_liblox_la_SOURCES  = \
	%reldir%/chunk.h     %reldir%/chunk.c     \
	%reldir%/debug.h     %reldir%/debug.c     \
	%reldir%/memory.h    %reldir%/memory.c    \
	%reldir%/value.h     %reldir%/value.c     \
	%reldir%/vm.h        %reldir%/vm.c        \
	%reldir%/common.h    %reldir%/state.h     \
	%reldir%/lox/stack.c %reldir%/lox/state.c \
	%reldir%/lox/value.c %reldir%/lox.c       
